--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "gray-matter": "^4.0.3",
     "less": "^4.4.0",
     "simple-git": "^3.28.0",
-    "vitepress": "^1.6.3"
+    "vitepress": "^1.6.3",
+    "vitepress-plugin-search": "1.0.4-alpha.22"
   },
   "dependencies": {
     "pagefind": "^1.3.0",
