--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "flexsearch": "^0.8.205",
     "gray-matter": "^4.0.3",
     "less": "^4.4.0",
+    "markdown-it-mathjax3": "^4.3.2",
     "simple-git": "^3.28.0",
+    "vite-plugin-ms-clarity": "^1.0.0",
     "vitepress": "^1.6.3",
     "vitepress-plugin-search": "1.0.4-alpha.22"
   },
