--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "vitepress-plugin-search": "1.0.4-alpha.22"
   },
   "dependencies": {
-    "pagefind": "^1.3.0",
-    "vitepress-plugin-pagefind": "^0.4.14",
     "vue": "^3.5.18"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "vitepress-plugin-search": "patches/vitepress-plugin-search.patch"
+    }
   }
 }
