--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,7 +37,7 @@ jobs:
 
     - name: 安装依赖
       run: |
-        pnpm install --frozen-lockfile
+        pnpm install --no-frozen-lockfile
 
     - name: 编译
       run: |
