--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -80,8 +80,8 @@ jobs:
           cd yangholmes.github.io
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add app/pick-gua
-          git commit -m 'feat: [bot]pick-gua publish new version!'
+          git add .
+          git commit -m 'feat: [bot]blog updated!'
           git push
         env:
           GITHUB_TOKEN: ${{ secrets.PUBLISH_TOKEN }}
