--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vitepress-plugin-search": "1.0.4-alpha.22"
   },
   "dependencies": {
+    "dayjs": "^1.11.13",
     "vue": "^3.5.18"
   },
   "pnpm": {
