--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^24.2.0",
     "@types/vue": "^2.0.0",
     "autoprefixer": "^10.4.21",
