--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/markdown-it": "^14.1.2",
     "@types/node": "^24.2.0",
+    "@types/three": "^0.179.0",
     "@types/vue": "^2.0.0",
     "autoprefixer": "^10.4.21",
     "flexsearch": "^0.8.205",
@@ -30,6 +31,7 @@
   },
   "dependencies": {
     "dayjs": "^1.11.13",
+    "three": "^0.179.1",
     "vue": "^3.5.18"
   },
   "pnpm": {
