fix: 修复最后更新时间错误的问题

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,8 @@ jobs:
     steps:
     - uses: actions/checkout@v4
       name: 检出代码
+      width:
+        fetch-depth: 0
 
     - uses: pnpm/action-setup@v4
       name: 安装 pnpm
