--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/vue": "^2.0.0",
     "autoprefixer": "^10.4.21",
     "flexsearch": "^0.8.205",
+    "glob": "^11.0.3",
     "gray-matter": "^4.0.3",
     "less": "^4.4.0",
     "markdown-it-mathjax3": "^4.3.2",
